<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Somabar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">No internet connection</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="clipboard_text_message">Text</string>

    <!-- AnyTextView -->
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.Showing default typeface.</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="blank"></string>
    <string name="msg_connection_bar">Your <b>Somabar</b> is now connected!</string>
    <string name="caption_discover_drink">DISCOVER <b>\nDRINKS</b></string>
    <string name="caption_community">COMMUNITY <b>\n&amp; SOCIAL</b></string>
    <string name="caption_my_drinks">MY <b>\nDRINKS</b></string>
    <string name="caption_skip">Skip</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_your_password">Forgot Your <b>Password</b></string>
    <string name="forgot_message">Enter your email address below and we\'ll send\n you instructions on how to change your password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">E-mail Address</string>
    <string name="user_name">User Name</string>
    <string name="birthday">Birthday: mm/dd/yy</string>
    <string name="preparation_instructions"> PREPARATION</string>

    <!-- DUMMY TEXT -->
    <string name="dummy_black_raze">Black Raze &amp; Lemon Lime Soda</string>

    <!-- SERVER ERRORS -->
    <string name="msg_server_reuest_time_out">Connection Timeout, Unable to reach the server</string>
    <string name="msg_server_failure">Could not connect to server, Please try again later</string>
    <string name="msg_server_not_found">Not found on server</string>
    <string name="msg_server_un_auth">UnAuthorized access denied</string>
    <string name="msg_server_conflict">Ops it\'s already exist</string>
    <string name="msg_server_internal">Internal server error found</string>
    <string name="msg_server_not_implemented">It is not implemented on server side</string>
    <string name="msg_server_bad_gateway">Bad Gateway</string>

    <!-- FACEBOOK MESSAGES -->
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">478241569016700</string>
    <string name="exception">Exception: %1$s</string>

</resources>