<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.pyntail.somabar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_black"
    android:orientation="vertical" >

    <com.pyntail.somabar.ui.views.TitleBar
        android:id="@+id/header_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/envelop_icon"
            android:contentDescription="@string/blank"
            android:gravity="top" />

        <com.pyntail.somabar.ui.views.AnyTextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/forgot_your_password"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:typeface="opensans_bold.ttf" />

        <com.pyntail.somabar.ui.views.AnyTextView
            android:id="@+id/txtForgotMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtForgotPassword"
            android:gravity="center"
            android:text="@string/forgot_message"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            app:typeface="opensans_extralight.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/txtForgotMessage"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <com.pyntail.somabar.ui.views.AnyEditTextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/email_icon_grey"
                android:drawablePadding="7dp"
                android:ems="6"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:testType="email"
                app:typeface="opensans_light.ttf" />

            <View
                android:id="@+id/seperator"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#41434F" />

            <ImageButton
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/send_button_orange"
                android:contentDescription="@string/blank" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>