<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.pyntail.somabar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/connectionBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_rounded"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:background="@drawable/connected_icon"
            android:contentDescription="@string/blank"
            android:gravity="center" />

        <com.pyntail.somabar.ui.views.AnyTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/blank"
            android:singleLine="true"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/msg_connection_bar"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:typeface="opensans_extralight.ttf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_above="@+id/drinksOptionContainer"
        android:layout_below="@id/connectionBarContainer" >

        <RelativeLayout
            android:id="@+id/machineIconContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:contentDescription="@string/blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_landing" >
            </ImageView>

            <com.pyntail.somabar.ui.views.RippleBackground
                android:id="@+id/content"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                app:rb_color="#54A9E4"
                app:rb_duration="3000"
                app:rb_radius="15dp"
                app:rb_rippleAmount="2"
                app:rb_scale="4" >

                <View
                    android:id="@+id/btnStatus"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/img_circle" />
            </com.pyntail.somabar.ui.views.RippleBackground>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drinksOptionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <com.pyntail.somabar.ui.views.AnyTextView
            android:id="@+id/txtDiscoverDrinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3"
            android:background="@android:color/transparent"
            android:contentDescription="@string/blank"
            android:gravity="center"
            android:text="@string/caption_discover_drink"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:typeface="opensans_light.ttf" />

        <com.pyntail.somabar.ui.views.AnyTextView
            android:id="@+id/txtCommunity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3"
            android:background="@android:color/transparent"
            android:contentDescription="@string/blank"
            android:gravity="center"
            android:text="@string/caption_community"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:typeface="opensans_light.ttf" />

        <com.pyntail.somabar.ui.views.AnyTextView
            android:layout_width="0dp"
            android:id="@+id/txtMyDrinks"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3"
            android:background="@android:color/transparent"
            android:contentDescription="@string/blank"
            android:gravity="center"
            android:text="@string/caption_my_drinks"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:typeface="opensans_light.ttf" />
    </LinearLayout>

</RelativeLayout>