<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.pyntail.somabar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_orange"
    android:orientation="vertical" >

    <com.pyntail.somabar.ui.views.TitleBar
        android:id="@+id/header_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_signin"
            android:contentDescription="@string/blank" >
        </ImageView>

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="@drawable/signup_logo"
            android:contentDescription="@string/blank"
            android:gravity="top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/imgLogo"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.pyntail.somabar.ui.views.AnyEditTextView
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignLeft="@+id/seperator"
                    android:layout_alignRight="@+id/seperator"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="7dp"
                    android:ems="6"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:testType="email"
                    app:typeface="opensans_light.ttf" />

                <ImageView
                    android:id="@+id/seperator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtEmail"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/signin_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <com.pyntail.somabar.ui.views.AnyEditTextView
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignLeft="@+id/ii_seperator"
                    android:layout_alignRight="@+id/ii_seperator"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/password_icon"
                    android:drawablePadding="7dp"
                    android:ems="6"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:testType="alphaNumeric"
                    app:typeface="opensans_light.ttf" />

                <ImageView
                    android:id="@+id/ii_seperator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtPassword"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/signin_line" />
            </RelativeLayout>

            <ImageButton
                android:id="@+id/btnSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/signin_button_black"
                android:contentDescription="@string/blank" />

            <com.pyntail.somabar.ui.views.AnyTextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="@string/forgot_password"
                android:textColor="@android:color/black"
                app:typeface="opensans_light.ttf" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>