<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.pyntail.somabar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <com.pyntail.somabar.ui.views.TitleBar
        android:id="@+id/header_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_orange" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/background_signin" >
        </ImageView>

        <com.pyntail.somabar.ui.views.RoundedImageView
            android:id="@+id/imgUser"
            android:layout_width="@dimen/sign_up_user_image"
            android:layout_height="@dimen/sign_up_user_image"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/signup_user_image"
            app:corner_radius="25dip"
            app:oval="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgUser" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.pyntail.somabar.ui.views.AnyEditTextView
                        android:id="@+id/txtFullName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/sign_up_edit_text_height"
                        android:layout_alignLeft="@+id/seperator"
                        android:layout_alignRight="@+id/seperator"
                        android:layout_centerHorizontal="true"
                       
                        android:layout_marginRight="9dp"
                        android:background="@android:color/transparent"
                        android:ems="6"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        app:testType="alpha"
                        app:typeface="opensans_light.ttf" />

                    <ImageView
                        android:id="@+id/seperator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtFullName"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/signup_line" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.pyntail.somabar.ui.views.AnyEditTextView
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/sign_up_edit_text_height"
                        android:layout_alignLeft="@+id/iiSeperator"
                        android:layout_alignRight="@+id/iiSeperator"
                        android:layout_centerHorizontal="true"
                       
                        android:layout_marginRight="9dp"
                        android:background="@android:color/transparent"
                        android:ems="6"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        app:testType="email"
                        app:typeface="opensans_light.ttf" />

                    <ImageView
                        android:id="@+id/iiSeperator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtEmail"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/signup_line" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.pyntail.somabar.ui.views.AnyEditTextView
                        android:id="@+id/txtUserName"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/sign_up_edit_text_height"
                        android:layout_alignLeft="@+id/iiiSeperator"
                        android:layout_alignRight="@+id/iiiSeperator"
                        android:layout_centerHorizontal="true"
                        
                        android:layout_marginRight="9dp"
                        android:background="@android:color/transparent"
                        android:ems="6"
                        android:hint="@string/user_name"
                        android:inputType="text|textCapSentences"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        app:testType="alphaNumeric"
                        app:typeface="opensans_light.ttf" />

                    <ImageView
                        android:id="@+id/iiiSeperator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtUserName"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/signup_line" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.pyntail.somabar.ui.views.AnyEditTextView
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/sign_up_edit_text_height"
                        android:layout_alignLeft="@+id/ivSeperator"
                        android:layout_alignRight="@+id/ivSeperator"
                        android:layout_centerHorizontal="true"
                      
                        android:layout_marginRight="9dp"
                        android:background="@android:color/transparent"
                        android:ems="6"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        app:testType="alphaNumeric"
                        app:typeface="opensans_light.ttf" />

                    <ImageView
                        android:id="@+id/ivSeperator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtPassword"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/signup_line" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.pyntail.somabar.ui.views.AnyEditTextView
                        android:id="@+id/txtDob"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/sign_up_edit_text_height"
                        android:layout_alignLeft="@+id/vSeperator"
                        android:layout_alignRight="@+id/vSeperator"
                        android:layout_centerHorizontal="true"
                        
                        android:layout_marginRight="9dp"
                        android:background="@android:color/transparent"
                        android:ems="6"
                        android:hint="@string/birthday"
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                           
                        app:typeface="opensans_light.ttf" />

                    <ImageView
                        android:id="@+id/vSeperator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtDob"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/signup_line" />
                </RelativeLayout>

                <ImageButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/signup_button_black"
                    android:contentDescription="@string/blank" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>